--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,28 +10,23 @@
     tools:context=".View.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <!--<fragment-->
-        <!--android:id="@+id/fragment_top"-->
-        <!--class="com.xuanvu.calendar.View.Fragment_Top"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--tools:layout="@layout/fragment_top" />-->
-    <android.support.design.widget.CoordinatorLayout
+    <fragment
+        android:id="@+id/fragment_top"
+        class="com.xuanvu.calendar.View.Fragment_Top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_top" />
 
-        <include layout="@layout/bottom_sheet_top" />
-    </android.support.design.widget.CoordinatorLayout>
-    <!--<fragment-->
-        <!--android:id="@+id/fragment_center"-->
-        <!--class="com.xuanvu.calendar.View.Fragment_Center"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <fragment
+        android:id="@+id/fragment_center"
+        class="com.xuanvu.calendar.View.Fragment_Center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <!--<fragment-->
-        <!--android:id="@+id/fragment_bottom"-->
-        <!--class="com.xuanvu.calendar.View.Fragment_Bottom"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--tools:layout="@layout/fragment_bottom" />-->
-</RelativeLayout>
+    <fragment
+        android:id="@+id/fragment_bottom"
+        class="com.xuanvu.calendar.View.Fragment_Bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_bottom" />
+</LinearLayout>
