--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -10,6 +10,11 @@
     tools:context=".View.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"></CalendarView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
