--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -8,34 +8,122 @@
 
     <LinearLayout
         android:id="@+id/top_detail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="30dp"
-            android:paddingTop="10dp"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_sheetDialog"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:background="@drawable/ic_arrow_drop_down_black_24dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingLeft="30dp"
+                android:paddingTop="10dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+             />
+
+            <ToggleButton
+
+                android:id="@+id/btn_top_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/ic_arrow_drop_down_black_24dp"
+                android:textOff=""
+                android:textOn="" />
+            <Button
+                android:id="@+id/btn_change_day"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableRight="@drawable/ic_swap_horiz_black_24dp"
+                android:background="@null"/>
+            <Button
+                android:id="@+id/btn_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingRight="10dp"
+                android:drawableRight="@drawable/ic_settings_black_24dp"
+                android:background="@null"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/layout_detail_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:weightSum="4">
+
+            <Button
+                android:id="@+id/btn_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawableTop="@drawable/ic_clear_all_black_24dp"
+                android:drawablePadding="8dp"
+                android:gravity="left|center_vertical"
+                android:text="Month"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btn_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawableTop="@drawable/ic_view_week_black_24dp"
+                android:drawablePadding="8dp"
+                android:gravity="left|center_vertical"
+                android:text="Week"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btn_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawableTop="@drawable/ic_today_black_24dp"
+                android:drawablePadding="8dp"
+                android:gravity="left|center_vertical"
+                android:text="Day"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btn_event"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawableTop="@drawable/ic_event_available_black_24dp"
+                android:drawablePadding="8dp"
+                android:gravity="left|center_vertical"
+                android:text="Event"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="12sp" />
+        </LinearLayout>
 
 
     </LinearLayout>
 
-    <l
+    <!--    <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        android:layout_below="@id/top_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include layout="@layout/top_detail" />
-    </l>
+            <include layout="@layout/bottom_sheet_top" />
+        </android.support.design.widget.CoordinatorLayout>-->
 </RelativeLayout>
