--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -24,8 +24,7 @@
                 android:paddingLeft="30dp"
                 android:paddingTop="10dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
-             />
+                android:textStyle="bold" />
 
             <ToggleButton
 
@@ -35,19 +34,21 @@
                 android:background="@drawable/ic_arrow_drop_down_black_24dp"
                 android:textOff=""
                 android:textOn="" />
+
             <Button
                 android:id="@+id/btn_change_day"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:drawableRight="@drawable/ic_swap_horiz_black_24dp"
-                android:background="@null"/>
+                android:background="@null"
+                android:drawableRight="@drawable/ic_swap_horiz_black_24dp" />
+
             <Button
                 android:id="@+id/btn_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingRight="10dp"
+                android:background="@null"
                 android:drawableRight="@drawable/ic_settings_black_24dp"
-                android:background="@null"/>
+                android:paddingRight="10dp" />
 
         </LinearLayout>
 
@@ -117,13 +118,5 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
-
     </LinearLayout>
-
-    <!--    <android.support.design.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include layout="@layout/bottom_sheet_top" />
-        </android.support.design.widget.CoordinatorLayout>-->
 </RelativeLayout>
