--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<!--    <TextView
-        android:id="@+id/txtDateSelect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"/>-->
+    <!--    <TextView
+            android:id="@+id/txtDateSelect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"/>-->
     <com.github.sundeepk.compactcalendarview.CompactCalendarView
         android:id="@+id/compactcalendar_view"
         android:layout_width="match_parent"
@@ -25,6 +25,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="28dp"
+        android:layout_marginRight="28dp"
+        android:background="@drawable/corner_search"
         android:padding="10dp"
         android:text="Không có sự kiện"
         android:textAlignment="center" />
