--- a/app/src/main/res/drawable/corner_search.xml
+++ b/app/src/main/res/drawable/corner_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--<solid android:color="@color/black"></solid>-->
-    <corners android:radius="10dp"></corners>
+    <solid android:color="#00000000"></solid>
+    <corners android:radius="12dp"></corners>
     <stroke
         android:width="1dp"
         android:color="@color/colorAccent" />
