--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -51,6 +51,7 @@
         android:padding="10dp">
 
         <EditText
+            android:id="@+id/edt_Title"
             android:layout_marginTop="12dp"
             android:padding="14dp"
             android:layout_width="match_parent"
@@ -172,6 +173,7 @@
             android:background="@color/colorAccent" />
 
         <EditText
+            android:id="@+id/edt_Content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mô tả"
