--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -22,13 +22,10 @@
 
         app:compactCalendarTextSize="12sp" />
 
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
-        android:background="@drawable/corner_search"
-        android:padding="10dp"
-        android:text="Không có sự kiện"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:textAlignment="center" />
 </LinearLayout>
