--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -8,16 +8,16 @@
       android:id="@+id/weekView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      app:columnGap="8dp"
+      app:dayBackgroundColor="#05000000"
       app:eventTextColor="@android:color/white"
-      app:textSize="12sp"
-      app:hourHeight="60dp"
+      app:headerColumnBackground="#ffffffff"
       app:headerColumnPadding="8dp"
       app:headerColumnTextColor="#8f000000"
-      app:headerRowPadding="12dp"
-      app:columnGap="8dp"
-      app:noOfVisibleDays="4"
       app:headerRowBackgroundColor="#ffefefef"
-      app:dayBackgroundColor="#05000000"
-      app:todayBackgroundColor="#1848adff"
-      app:headerColumnBackground="#ffffffff"/>
+      app:headerRowPadding="12dp"
+      app:hourHeight="60dp"
+      app:noOfVisibleDays="4"
+      app:textSize="12sp"
+      app:todayBackgroundColor="#1848adff" />
 </RelativeLayout>
