--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:padding="10dp"
-        android:background="@color/backgroud_spflash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/backgroud_spflash"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <Button
             android:id="@+id/btn_back"
@@ -38,8 +37,6 @@
             android:background="@drawable/ic_done_black_24dp" />
 
     </RelativeLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -178,60 +175,28 @@
             android:layout_marginRight="6dp"
             android:background="@color/colorAccent" />
 
-        <!--      <RelativeLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:padding="14dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="bottom"
+            android:padding="10dp">
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Tới"
-                      android:textColor="#000"
-                      android:textSize="16dp" />
-
-                  <TextView
-                      android:id="@+id/tv_date_to"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_alignParentRight="true"
-                      android:text="1212" />
-              </RelativeLayout>
-
-              <ImageView
-                  android:layout_width="match_parent"
-                  android:layout_height="1dp"
-                  android:layout_marginLeft="6dp"
-                  android:layout_marginRight="6dp"
-                  android:background="@color/colorAccent" />
-
-              <RelativeLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:padding="14dp">
-
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Lặp lại"
-                      android:textColor="#000"
-                      android:textSize="16dp" />
-
-                  <TextView
-                      android:id="@+id/tv_lap_lai"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_alignParentRight="true"
-                      android:text="Hằng ngày" />
-              </RelativeLayout>
-              <ImageView
-                  android:layout_width="match_parent"
-                  android:layout_height="1dp"
-                  android:layout_marginLeft="6dp"
-                  android:layout_marginRight="6dp"
-                  android:background="@color/colorAccent" />-->
+            <Button
+                android:id="@+id/btn_delete"
+                android:layout_width="80dp"
+                android:layout_height="35dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/colorRed"
+                android:text="Delete"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="16dp"
+                android:textStyle="normal" />
+        </RelativeLayout>
 
 
     </LinearLayout>
+
 
 </LinearLayout>
