--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.MainActivity"
+    tools:context=".view.activities.main.MainActivity"
     android:paddingTop="20dp"
     android:paddingLeft="22dp"
     android:paddingRight="22dp">
@@ -12,11 +12,11 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnBack"
+            android:id="@+id/btn_search"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="8dp"
@@ -44,19 +44,9 @@
                 android:background="@android:color/transparent"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="2dp"
-                android:textSize="14dp"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textSize="14dp" />
         </LinearLayout>
-    </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/RecyclerViewSearch"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:verticalSpacing="10dp" />
+    </LinearLayout>z
 
 </LinearLayout>
