--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#888</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorRed">#DD0000</color>
+    <color name="backgroud_spflash">#33FFCC</color>
+    <color name="colorClear">#00000000</color>
+
+    <color name="colorBlack">#333</color>
+    <color name="darkColorPrimary">#1e2756</color>
+    <color name="darkColorPrimaryDark">#141831</color>
+    <color name="darkColorAccent">#2aac4b</color>
+
 </resources>
